log/build_2024-03-13_14-55-31/mypkg/stderr.log
  File "/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/CircleImgPub.py", line 73
    for i,cnt in enumerate(contours):
    ^^^
SyntaxError: expected 'except' or 'finally' block

